--- a/factorial.html
+++ b/factorial.html
@@ -8,7 +8,7 @@
     <script type="text/javascript">
 
         var numero=prompt("Introduzca el número");
-        var aux=0;
+        
         var resultado=1;
         /*  var total = 1;
             for (i = 1; i <= n; i++) {
@@ -16,16 +16,16 @@
             }
             return total;*/
 
-        /*while(numero>1){
+        while(numero>1){
             resultado=resultado*numero;
             numero--;
             alert(numero);
-        }*/
+        }
 
-        for(numero;numero>1;numero--){
+        /*for(i=numero;i>0;i--){
             resultado=resultado*numero;
             alert(numero);
-        }
+        }*/
 
         alert("Resultado final: "+resultado);
 
