--- a/dni.html
+++ b/dni.html
@@ -18,7 +18,7 @@
         else {
             var indice = numero % 23;
             alert("Número calculado que sirve de índice"+indice);
-            var letraCalculada = letras[indice];
+            letraCalculada = letras[indice];
             alert(letraCalculada);
             if(letra==letraCalculada){
                 alert("OKEY")
