--- a/Ficheros ejemplo - Php Sesiones-20221117/login.html
+++ b/Ficheros ejemplo - Php Sesiones-20221117/login.html
@@ -7,7 +7,7 @@
         <script src="validacion.js"></script>
     </head>
     <body>
-        <form action="http://localhost/MenuPrincipal.php" 
+        <form action="MenuPrincipal.php" 
         method="post"
         onsubmit="return comprobar()">
             <label for="usuario">Usuario:</label><br>
