--- a/nuevo_formulario.html
+++ b/nuevo_formulario.html
@@ -9,7 +9,7 @@
 
     <h2>Text input fields</h2>
 
-    <form>
+    <form  action="" method="POST" >
         <label id="etiquetaNombre" for="cajaNombre">Nombre:</label><br>
         <input id="cajaNombre" type="text" name="nombre"><br>
         <label id="etiquetaApellido" for="lname">Apellido:</label><br>
