--- a/inicio.html
+++ b/inicio.html
@@ -12,6 +12,10 @@
   <input type="text" id="fname" name="nombre"><br>
   <label for="lname">Apellido:</label><br>
   <input type="text" id="lname" name="apellido"><br><br>
+  <label for="lname">DNI:</label><br>
+  <input type="text" id="lname" name="dni"  
+  pattern="[A-Z]{8}[0-9]{1}$"
+  ><br><br>
   <input type="submit" name="botonsito" value="BOTONACO">
 </form> 
 
