nueva version con sesiones

--- a/inicio.html
+++ b/inicio.html
@@ -14,7 +14,7 @@
   <input type="text" id="lname" name="apellido"><br><br>
   <label for="lname">DNI:</label><br>
   <input type="text" id="lname" name="dni"  
-  pattern="[A-Z]{8}[0-9]{1}$"
+  pattern="[0-9]{8}[A-Z]{1}$"
   ><br><br>
   <input type="submit" name="botonsito" value="BOTONACO">
 </form> 
