--- a/form_subida.html
+++ b/form_subida.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <html>
     <head>
         <meta charset="UTF-8">
@@ -13,7 +9,7 @@ and open the template in the editor.
         <?php
         ?>
 
-        <form action="subida.php" method="post" enctype="multipart/form-data">
+        <form action="script_subida.php" method="post" enctype="multipart/form-data">
             <label for="nombre">Nombre:</label><br>
             <input type="text" id="nombre"><br><br>
             <input type="file" name="ficheroSubida" id="ficheroSubida"><br><br>
