soluciones com diferentes

--- a/ejercicios_recu/registro_DGT.html
+++ b/ejercicios_recu/registro_DGT.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <form action="#" method="POST" onsubmit="return validarRegistro()">
-        <h1>Bienvenido a Twitter</h1>
+        <h1>Bienvenido a la DGT</h1>
         <label id="etiquetaDNI" for="cajaDNIString">NIE/DNI:</label><br>
         <input required id="cajaDNIString" type="text" name="cajaDNIString"><br>
         
